<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".presentation.WelcomeFragment">

            <ImageView
                android:id="@+id/imageViewAppLogo"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/welcome_logo"
                android:src="@drawable/ic_brain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewAppTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/welcome_title"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/imageViewAppLogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/game_rules"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/textViewAppTitle" />

            <Button
                android:id="@+id/button_understand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="16dp"
                android:text="@string/understand"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>