<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResults"
            type="com.voitov.brainlevelup.domain.entities.GameResults" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context=".presentation.GameResultsFragment">

        <ImageView
            android:id="@+id/imageViewEmojiResult"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="48dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/game_over"
            app:emojiResult="@{gameResults.isWinner}"
            app:layout_constraintBottom_toTopOf="@id/textViewRequiredAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_smile" />

        <TextView
            android:id="@+id/textViewRequiredAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/required_score"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/textViewScoreAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredAnswers="@{gameResults.gameplaySettings.minCountOfCorrectAnswersToWin}" />

        <TextView
            android:id="@+id/textViewScoreAnswers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/score_answers"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/textViewRequiredPercentage"
            app:layout_constraintEnd_toEndOf="@id/textViewRequiredAnswers"
            app:layout_constraintStart_toStartOf="@id/textViewRequiredAnswers"
            app:layout_constraintTop_toBottomOf="@id/textViewRequiredAnswers"
            app:scoreAnswers="@{gameResults.countOfQuestions}" />

        <TextView
            android:id="@+id/textViewRequiredPercentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/required_percentage"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/textViewScorePercentage"
            app:layout_constraintEnd_toEndOf="@id/textViewRequiredAnswers"
            app:layout_constraintStart_toStartOf="@id/textViewRequiredAnswers"
            app:layout_constraintTop_toBottomOf="@id/textViewScoreAnswers"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredPercentage="@{gameResults.gameplaySettings.minPercentageOfCorrectAnswersToWin}" />

        <TextView
            android:id="@+id/textViewScorePercentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textViewRequiredAnswers"
            app:layout_constraintStart_toStartOf="@id/textViewRequiredAnswers"
            app:layout_constraintTop_toBottomOf="@id/textViewRequiredPercentage"
            app:scorePercentage="@{gameResults}"
            tools:text="@string/score_percentage" />

        <Button
            android:id="@+id/buttonTryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>